@@ -23,3 +23,4 @@ midi_conversion.shp
 sfx_conversion.shp
 palette_fades.shp
 defaultkeys.txt
+scaling_method.shp
